[project]
name = "polars-runtime-32-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harshil", email = "37377066+harshil21@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = ["polars==1.36.0b2", "polars-runtime-32"]

[tool.uv.sources]
polars-runtime-32 = [{ url = "https://github.com/harshil21/polars-runtime-32-ft/raw/refs/heads/main/wheels/polars_runtime_32-1.36.0b2-cp314-cp314t-manylinux_2_39_x86_64.whl", marker = "platform_machine == 'x86_64'" },
{ url = "https://github.com/harshil21/polars-runtime-32-ft/raw/refs/heads/main/wheels/polars_runtime_32-1.36.0b2-cp314-cp314t-manylinux_2_39_x86_64.whl", marker = "platform_machine == 'arm64'" }]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
