[project]
name = "polars-runtime-32-ft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harshil", email = "37377066+harshil21@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = ["polars==1.36.0"]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
